commit from VS 02

--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,7 @@
         <img src="../resources/OIP.jpg" alt="" class="logoImg">        
       </div>            
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>      
+        <li><a href="#">Homee</a></li>      
       </ul>
     </div>
   </header>
