--- a/includes/header.html
+++ b/includes/header.html
@@ -2,10 +2,11 @@
   <header id="header">    
     <div class="navbar">      
       <div class="logo">
-        <img src="../resources/OIP.jpg" alt="" class="logoImg">        
+        <img src="../resources/site-logo.png" alt="" class="logoImg">        
       </div>            
       <ul class="nav-links">
-        <li><a href="#">Page Home</a></li>      
+        <li><a href="#">Page Home</a></li>
+        <li><a href="../pages/privacy-policy.html">Política de Privacidade</a></li>       
       </ul>
     </div>
   </header>
