--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,7 @@
         <img src="../resources/site-logo.png" alt="" class="logoImg">        
       </div>            
       <ul class="nav-links">
-        <li><a href="../pages/home.html">Home Page</a></li>
+        <li><a href="../home.html">Home Page</a></li>
         <li><a href="../pages/privacy-policy.html">Política de Privacidade</a></li>       
       </ul>
     </div>
