--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,4 +1,7 @@
   <!-- Rodapé -->
   <footer>
-    <p>&copy; 2025 Meu Simulador | Todos os direitos reservados</p>
+    <div style="display: flex;">
+      <img src="../resources/site-logo.png" alt="" style="height: 100px; margin-right: 20px;">        
+    </div>   
+    <p>&copy; 2025 DevArea | Todos os direitos reservados</p>
   </footer>
