--- a/assets/css/global/layout.css
+++ b/assets/css/global/layout.css
@@ -33,8 +33,8 @@ input.error:focus, select.error:focus {
 header {
   position: relative;
   top: 0; /* Fixa o cabeçalho no topo */
-  left: 200px; /* Começa depois do sidebar (considerando 200px de largura da sidebar) */
-  width: calc(100% - 200px); /* Subtrai a largura da sidebar para que o header ocupe o restante da largura */
+  /*left: 200px; /* Começa depois do sidebar (considerando 200px de largura da sidebar) */
+  /*width: calc(100% - 200px); /* Subtrai a largura da sidebar para que o header ocupe o restante da largura */
   background: var(--primary-color); /* Cor do cabeçalho */
   z-index: 1001; /* Garante que o cabeçalho fique sobre o conteúdo e a sidebar */
   padding: 20px;
@@ -227,4 +227,19 @@ input, select {
   box-sizing: border-box;
   font-size: 16px;
   margin-bottom: 15px;
+}
+
+.info-content{  
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333; 
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px 0;
 }
