ad sense second try 2

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,17 @@
-  <!-- Rodapé -->
-  <footer>
-    <div style="display: flex;">
-      <img src="../resources/site-logo.png" alt="" style="height: 100px; margin-right: 20px;">        
-    </div>   
-    <p>&copy; 2025 DevArea | Todos os direitos reservados</p>
-  </footer>
+<!-- Rodapé -->
+<footer>
+  <div style="display: flex; align-items: center; width: 100%; justify-content: space-between; padding: 20px 200px 20px 200px;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+      <img src="../resources/site-logo.png" alt="" style="height: 100px; margin-right: 20px;">    
+      <p>&copy; 2025 DevArea | Todos os direitos reservados</p>
+    </div>
+
+    <div>
+      <ul class="nav-links">      
+        <li><a style="font-size: 15px;" href="../pages/privacy-policy.html">Política de Privacidade</a></li>  
+        <li><a style="font-size: 15px;" href="../pages/usage-terms.html">Termos de Uso</a></li>     
+      </ul>
+    </div>
+
+  </div> 
+</footer>
