ad sense second try 2

--- a/assets/css/global/base.css
+++ b/assets/css/global/base.css
@@ -3,11 +3,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 /* Corpo */
 html, body {
   height: 100%;
+  max-width: 100%;
 }
 
 body {
